[tool.poetry]
name = "skelethon-python-api"
version = "0.1.0"
description = "Simple skelethon for a python api"
authors = ["rickslayer <paulo@actio.net.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
boto3 = "^1.14.60"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
